@@ -1,3 +1,9 @@
+2008-10-08  Alexander Sack  <asac@ubuntu.com>
+
+	* src/connection-editor/page-ip4.c
+		- (ui_to_setting) don't stop processing ui_to_settings when
+			when g_strsplit_set result list contains an empty string.
+
 2008-10-06  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-device-cdma.c
